Prevent side-bar from being visible on load on mobile

--- a/static/css/style-responsive.css
+++ b/static/css/style-responsive.css
@@ -1,4 +1,7 @@
 @media (max-width: 768px) {
+    #sidebar > ul {
+        display: none;
+    }
 
     .header {
         position: absolute;
